<resources>
    <string name="app_name">t3a3-Ivanova-Miroslava</string>
    <string name="welcome">Bienvenido/a</string>
    <string name="make_transaction">Hacer transacción</string>
    <string name="userDNI">X2386337X</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="helper_text">Obligatorio</string>
    <string name="dni">DNI</string>
    <string name="password">Contraseña</string>
    <string name="enter">Acceder</string>
    <string name="exit">Salir</string>
    <string name="bienvenido_banco">Bienvenido/a a mi banco</string>
    <string name="entrar">ACCEDER</string>
    <string name="txt_pos_glob">POSICIÓN GLOBAL</string>
    <string name="txt_mov">MOVIMIENTOS</string>
    <string name="txt_transf">TRANSFERENCIAS</string>
    <string name="txt_cambiarCont">CAMBIAR CONTRASEÑA</string>
    <string name="txt_promo">PROMOCIONES</string>
    <string name="txt_cajeros">CAJEROS</string>
    <string name="txt_salir">SALIR</string>
    <string name="cambiar_contr">Cambiar Contraseña</string>
    <string name="contr_actual">Contraseña actual</string>
    <string name="contrNueva">Contraseña nueva</string>
    <string name="repetir_contrN">Repetir contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ltimos_movimientos">Últimos movimientos:</string>
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>


    <string-array name="cuentas">
        <item>ES90-2080-5430-10-12763672</item>
        <item>ES90-2085-5430-10-12763672</item>
        <item>ES90-2087-5430-10-12763672</item>
    </string-array>

    <string-array name="divisas">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>

    <string-array name="codigoidioma">
        <item>es</item>
        <item>en</item>
    </string-array>

    <string-array name="idioma">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>


    <string-array name="datos">
        <item>Datos locales</item>
        <item>Servicio web</item>
    </string-array>
    <string-array name="codigodatos">
        <item>local</item>
        <item>web</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>