<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.SaludoActivity"
    tools:openDrawer="start">

    <!-- Usamos un solo CoordinatorLayout para manejar el contenido y los elementos flotantes -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Contenido principal: Toolbar, LinearLayout, botones, etc. -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/cerulean_blue"
                android:elevation="4dp"
                android:theme="@style/TemaBanco"
                app:navigationIcon="@drawable/menu_icon" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"> <!-- Aseguramos que el contenido no se sobreponga al toolbar -->

                <!-- Material CardView -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/idcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/white">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imagen"
                            android:layout_width="@dimen/card_img_size"
                            android:layout_height="@dimen/card_img_size"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:src="@android:mipmap/sym_def_app_icon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textoBienvenida"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/welcome"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imagen"
                            app:layout_constraintTop_toTopOf="@id/imagen" />

                        <TextView
                            android:id="@+id/textoUsuarioDNI"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imagen"
                            app:layout_constraintTop_toBottomOf="@id/textoBienvenida" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- Botones -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPosicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_pos_glob"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/global_pos" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMovimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_mov"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/mov" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTransf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_transf"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/transf" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContrasenya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_cambiarCont"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/passwd" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPromociones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_promo"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/promo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCajeros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_cajeros"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/map" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSalir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="17dp"
                    android:text="@string/txt_salir"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/back" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- BottomAppBar y FloatingActionButton en la parte inferior -->
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
            app:navigationIconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/make_transaction"
            android:src="@drawable/bank_icon"
            app:layout_anchor="@id/bottomAppBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/default_color2"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/cerulean_blue"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>